5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4162/executions/1723_2499.log
== TEST (2019-05-09 10:49:22) 
-- CODE:
k= int(input("insira um numero natural: "))
from math import
print(1/factorial(k))
-- ERROR:
File "XXXX", line 2
    from math import
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:49:28) 
-- CODE:
k= int(input("insira um numero natural: "))
from math import*
print(1/factorial(k))
-- OUTPUT:
0.0001984126984126984
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:49:33) 
-- CODE:
k= int(input("insira um numero natural: "))
from math import*
print(1/factorial(k))
-- OUTPUT:
0.0001984126984126984
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:52:20) 
-- CODE:
k= int(input("insira um numero natural: "))
from math import*
a=(1/factorial(k))
s=1
while (s<k):
	a=a+a
print(a)
-- OUTPUT:
0.0001984126984126984
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:52:24) 
-- CODE:
k= int(input("insira um numero natural: "))
from math import*
a=(1/factorial(k))
s=1
while (s<k):
	a=a+a
print(a)
-- OUTPUT:
0.0001984126984126984
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:53:00) 
-- CODE:
k= int(input("insira um numero natural: "))
from math import*
a=(1/factorial(k))
s=0
while (s<k):
	a=a+a
print(a)
-- OUTPUT:
0.0001984126984126984
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:53:05) 
-- CODE:
k= int(input("insira um numero natural: "))
from math import*
a=(1/factorial(k))
s=0
while (s<k):
	a=a+a
print(a)
-- OUTPUT:
0.0001984126984126984
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:54:47) 
-- CODE:
k= int(input("insira um numero natural: "))
from math import*
a=(1/factorial(k))
s=0
while (a<k):
	a+=(1/factorial(k))
print(a)
-- OUTPUT:
7.0001984126972685
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:54:55) 
-- CODE:
k= int(input("insira um numero natural: "))
from math import*
a=(1/factorial(k))
s=0
while (a<k):
	a+=(1/factorial(k))
print(a)
-- OUTPUT:
7.0001984126972685
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:55:44) 
-- CODE:
k= int(input("insira um numero natural: "))
from math import*
a=(1/factorial(k))
a=0
s=0
while (s<k):
	a+=(1/factorial(k))
	s+=1
print(a)
-- OUTPUT:
0.0013888888888888887
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:55:58) 
-- CODE:
k= int(input("insira um numero natural: "))
from math import*
a=(1/factorial(k))
a=0
s=0
while (s<k):
	a+=(1/factorial(s))
	s+=1
print(a)
-- OUTPUT:
2.7180555555555554
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:56:26) 
-- CODE:
k= int(input("insira um numero natural: "))
from math import*
a=(1/factorial(k))
a=0
s=0
while (s<k):
	a+=(1/factorial(s))
	s+=1
print(round(a,8))
-- OUTPUT:
2.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 10:57:06) 
-- CODE:
k= int(input("insira um numero natural: "))
from math import*
a=(1/factorial(k))
a=0
s=0
while (s<k):
	a+=(1/factorial(s))
	s+=1
print(round(a,8))
-- EXECUTION TIME:
0.188203
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71805556
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.71666667
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
